# AI_RAG

./: .gitignore  README.md  main.py  pyproject.toml  readme_setup.txt  requirements.txt
0-DataIngestParsing/: 1-Ingestion-text.ipynb  1-dataingestion.ipynb  2-ingestion-pdf.ipynb  3-ingestion-doc.ipynb  4-csv-excel.ipynb  5-json.ipynb  6-db.ipynb
0-DataIngestParsing/data/doc/: attention.docx
0-DataIngestParsing/data/structured/: inventory.xlsx
0-DataIngestParsing/data/text/: machine_learning.txt  python_intro.txt
1-EmbeddingAndDB/: embedding.ipynb
2-VectorStore/: chromadb.ipynb
2-VectorStore/chroma_db/: chroma.sqlite3
