[project]
name = "ai-rag"
version = "0.1.0"
description = "RAG AI Implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.17",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-openapi>=0.1.1",
    "matplotlib>=3.10.6",
    "msoffcrypto-tool>=5.4.2",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "unstructured[docx]>=0.18.13",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
